--- a/eventTabs/may_xxiii_/kitchen.html
+++ b/eventTabs/may_xxiii_/kitchen.html
@@ -11,28 +11,28 @@
         These are known as customers' offers and you can see the offers in the right part of the event window. There are 12 offers
         in total of which 3 can be visible at the same time (that's the similar principle to our previous events with rotating chests).<br><br>
 
-        <center><img src="https://i.ibb.co/Jqdbw0f/EL-akcia-august-2022-okno-akcie.png" style="width: 60%;"></center><br>
+        <center><img src="https://i.ibb.co/0YmkkQH/event-window.png" style="width: 60%;"></center><br>
 
-        Your task begins with the event questline, where you can earn Chef Hats <img src="https://i.ibb.co/4tYSS6K/EL-akcia-august-2022-event-currency-1.png" style="height: 15px; margin-bottom: 3px;">.
+        Your task begins with the event questline, where you can earn Chef Hats <img src="https://i.ibb.co/fxS5GTy/event-currency-1.png" style="height: 15px; margin-bottom: 3px;">.
         You need Chef Hats to spawn Dishes on your board, combine them and fulfill various customers' offers that the Kitchen Event generates for you.<br><br>
 
         <center>
-            <img src="https://i.ibb.co/9ccjXQg/EL-akcia-august-2022-cup-yellow.png">
-            <img src="https://i.ibb.co/4VnjPpT/EL-akcia-august-2022-cup-red-new.png">
-            <img src="https://i.ibb.co/GPD05c9/EL-akcia-august-2022-cup-green.png">
+            <img src="https://i.ibb.co/k0JSdMm/generator1.png">
+            <img src="https://i.ibb.co/6FmGvmY/generator2.png">
+            <img src="https://i.ibb.co/VHNs3vT/generator3.png">
         </center><br>
 
         To spawn Dishes on your board, click one of the Stockpiles placed at the bottom of your event screen. Each Stockpile generates a different
         set of Dishes, so make sure to hover over a respective stockpile before you perform the spawning process and see where you can get the required
         items.<br><br>
 
-        <center><img src="https://i.ibb.co/znCWhn7/EL-akcia-august-2022-offer-required-pieces.png"></center><br>
+        <center><img src="https://i.ibb.co/GTHMj8k/offer-required-dishes.png"></center><br>
 
         To find your required dishes, let's take a closer look at different customers' offers in the right part of the event window.
 
         <div class="row" style="margin-top: 40px; margin-bottom: 40px;">
             <div class="col-sm-4">
-                <center><img src="https://i.ibb.co/zGqZM7B/EL-akcia-august-2022-offers.png"></center>
+                <center><img src="https://i.ibb.co/gWd2VMd/offers-inside-window.png"></center>
             </div>
             <div class="col-sm-8">
                 Three customers' offers can be seen at the same time. You can always <b>Decline</b> any offer you wish (by clicking the Trashcan button)
@@ -53,7 +53,7 @@
         dish and in order to obtain the high-level one, you need to combine 2 identical dishes in the kitchen. This is where the merging part of this event comes into play
         and all of that situated in your event kitchen:<br><br>
 
-        <center><img src="https://i.ibb.co/FxLhz1G/EL-akcia-august-2022-board-items.png" style="width: 35%;"></center><br>
+        <center><img src="https://i.ibb.co/m90T6Yt/board.png" style="width: 35%;"></center><br>
 
         Take a look at the <b>Dishes</b> and <b>Offers</b> tabs to see more closely how the merging process works.<br><br>
         
@@ -62,7 +62,7 @@
         chaos on your board. The constant need to tidy up your space and to actually bring some order out of chaos is in my opinion one of
         the best aspects of this event.<br><br>
 
-        <center><img src="https://i.ibb.co/Q8YRJ1b/EL-akcia-august-2022-board.png" style="max-width: 100%;"></center><br>
+        <center><img src="https://i.ibb.co/VqB664P/board-image.png" style="max-width: 100%;"></center><br>
 
         <ul>
           <li><b>Group your dishes!</b> When you run into a new offer and perform the spawning process too many times, a lot of new dishes 
