--- a/eventTabs/may_xxiii_/stockpiles.html
+++ b/eventTabs/may_xxiii_/stockpiles.html
@@ -7,8 +7,8 @@
 
    <div style="margin-left: 3%; margin-right: 3%; margin-bottom: 25px;">
       
-      There are 3 stockpiles in total, each generating its own type of dishes. The __ generates the Hot Chocolate, 
-      the __ generates the Lime Dessert and the __ generates Delicious Roast.
+      There are 3 stockpiles in total, each generating its own type of dishes. The Milk Stockpile generates Hot Chocolate, 
+      the Lime Pack generates Lime Dessert and the Vegetable Box generates Delicious Roast.
 
       <div class="bbTable">
           <table class="table-primary" style="width: 100%; margin-top: 20px; margin-bottom: 20px;">
@@ -18,7 +18,7 @@
                   <td colspan="6" style="text-align: center">Drop Rate</td>
               </tr>
               <tr>
-                <th style="width: 40%; text-align: center;">Cup</th>
+                <th style="width: 40%; text-align: center;">Stockpile</th>
                 <th style="width: 10%; text-align: center;">40%</th>
                 <th style="width: 10%; text-align: center;">30%</th>
                 <th style="width: 10%; text-align: center;">15%</th>
@@ -26,28 +26,28 @@
                 <th style="width: 10%; text-align: center;">5%</th>
               </tr>
               <tr>
-                <td style="width: 40%; text-align: center;"><img src="https://i.ibb.co/9ccjXQg/EL-akcia-august-2022-cup-yellow.png"></td>
-                <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/zmg9JHX/EL-akcia-august-2022-a1.png"></td>
-                <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/ZcMgfDM/EL-akcia-august-2022-a2.png"></td>
-                <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/2kySgfX/EL-akcia-august-2022-a3.png"></td>
-                <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/93wJKpf/EL-akcia-august-2022-a4.png"></td>
-                <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/2vPJPGh/EL-akcia-august-2022-a5.png"></td>
+                <td style="width: 40%; text-align: center;"><img src="https://i.ibb.co/k0JSdMm/generator1.png"></td>
+                <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/0y9mGjR/a1.png"></td>
+                <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/2c9wvtF/a2.png"></td>
+                <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/qrZQJgj/a3.png"></td>
+                <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/drhJR1W/a4.png"></td>
+                <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/Yd13F40/a5.png"></td>
               </tr>
               <tr>
-                <td style="width: 40%; text-align: center;"><img src="https://i.ibb.co/4VnjPpT/EL-akcia-august-2022-cup-red-new.png"></td>
-                <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/WcBRqQq/EL-akcia-august-2022-b1.png"></td>
-                <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/gjv64tP/EL-akcia-august-2022-b2.png"></td>
-                <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/ryyNqQK/EL-akcia-august-2022-b3.png"></td>
-                <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/5kLGJsC/EL-akcia-august-2022-b4.png"></td>
-                <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/BnXzJb8/EL-akcia-august-2022-b5.png"></td>
+                <td style="width: 40%; text-align: center;"><img src="https://i.ibb.co/6FmGvmY/generator2.png"></td>
+                <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/ZY3tNZG/b1.png"></td>
+                <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/C29PGwy/b2.png"></td>
+                <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/M7MM6mf/b3.png"></td>
+                <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/8j1S2Ww/b4.png"></td>
+                <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/MkMvj7t/b5.png"></td>
               </tr>
               <tr>
-                <td style="width: 40%; text-align: center;"><img src="https://i.ibb.co/GPD05c9/EL-akcia-august-2022-cup-green.png"></td>
-                <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/MVtf1L0/EL-akcia-august-2022-c1.png"></td>
-                <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/Hp5d6Mc/EL-akcia-august-2022-c2.png"></td>
-                <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/54D6L5q/EL-akcia-august-2022-c3.png"></td>
-                <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/WH8MJsd/EL-akcia-august-2022-c4.png"></td>
-                <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/N37j113/EL-akcia-august-2022-c5.png"></td>
+                <td style="width: 40%; text-align: center;"><img src="https://i.ibb.co/VHNs3vT/generator3.png"></td>
+                <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/r73WXpV/c1.png"></td>
+                <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/RSb6TzJ/c2.png"></td>
+                <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/h161D9m/c3.png"></td>
+                <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/0FvnYyK/c4.png"></td>
+                <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/RTQhLWW/c5.png"></td>
               </tr>
             </tbody>
           </table>
