--- a/eventTabs/may_xxiii_/loots.html
+++ b/eventTabs/may_xxiii_/loots.html
@@ -3,7 +3,7 @@
 <div id="main">
 
      <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">..:: Loots ::..<br></h5>
-     <img id="event_banner" src="https://i.ibb.co/CzmD860/EL-akcia-august-2022-card.png" alt="undefined" class="center " style="margin-bottom: 15px;">
+     <img id="event_banner" src="https://i.ibb.co/NC3HBw6/flavor-loot.png" alt="undefined" class="center " style="margin-bottom: 15px;">
 
      <div style="margin-left: 3%; margin-right: 3%; margin-bottom: 25px;">
         
@@ -29,7 +29,7 @@
                   <th style="width: 8%; text-align: center;">15%</th>
                 </tr>
                 <tr>
-                  <td style="width: 20%; text-align: center;"><img src="https://i.ibb.co/CzmD860/EL-akcia-august-2022-card.png"></td>
+                  <td style="width: 20%; text-align: center;"><img src="https://i.ibb.co/NC3HBw6/flavor-loot.png"></td>
                   <td style="width: 8%; text-align: center;">75 <img src="https://i.ibb.co/8KMKWPm/event-currency-1.png"></td>
                   <td style="width: 8%; text-align: center;">100 <img src="https://i.ibb.co/8KMKWPm/event-currency-1.png"></td>
                   <td style="width: 8%; text-align: center;">1 <img src="https://i.ibb.co/HdDdfYk/a6.png"></td>
