may_xxiii written guides correction

--- a/eventTabs/may_xxiii_/dishes.html
+++ b/eventTabs/may_xxiii_/dishes.html
@@ -77,7 +77,7 @@
 
     In this section we will focus on calculating the average costs of different levels. It will help you create a general idea about the costs of customers' offers.<br><br>
 
-    Let's consider we have 400 chef hats at our disposal, which makes it possible to open a respective stockpile 100 items. Sticking with the percentual values
+    Let's consider we have 400 chef hats at our disposal, which makes it possible to open a respective stockpile 100 times. Sticking with the percentual values
     (from the <b>Stockpiles</b> tab), we will get the following output:<br><br>
     <ul>
       <li>40x dish level 1</li>
