--- a/eventTabs/may_xxiii_/loot.html
+++ b/eventTabs/may_xxiii_/loot.html
@@ -2,7 +2,7 @@
 
 <div id="main">
 
-     <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">..:: Loots ::..<br></h5>
+     <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">..:: Loot ::..<br></h5>
      <img id="event_banner" src="https://i.ibb.co/NC3HBw6/flavor-loot.png" alt="undefined" class="center " style="margin-bottom: 15px;">
 
      <div style="margin-left: 3%; margin-right: 3%; margin-bottom: 25px;">
