quest lists reimagined

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="bootstrap-4.3.1/css/custom_v2.css">
+    <link rel="stylesheet" type="text/css" href="bootstrap-4.3.1/css/custom.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
     crossorigin="anonymous">
 
@@ -155,6 +155,7 @@
         <div class="col-md-6 col-sm-11 center bg-skin_light_background rounded-bottom75 rounded-top75" style="padding-top: 20px; padding-bottom: 20px; max-height: 550px; overflow-y: scroll;">
             <div
              id="column_with_news" class="col-md">
+                <li><strong>Quest Lists Reimagined!</strong> The Quest Lists for events received a massive overhaul and now offer many of your long requested features (May 5th 2023)</li>
                 <li><strong>Mama Juul's Fusion Feast event arrived!</strong> All buildings from this event are now in the database (April 18th 2023)</li>
                 <li><strong>Blessings for Seasons!</strong> Blessings for Seasons are now fully supported by the website. You can find them on the Seasons page (April 9th 2023)</li>
                 <li><strong>Research for Guest Races!</strong> All Guest Races now have their interactive research tree together with the calculator of the remaining costs available (April 7th 2023)</li>
