--- a/events.html
+++ b/events.html
@@ -17,7 +17,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="bootstrap-4.3.1/css/custom_v2.css">
+    <link rel="stylesheet" type="text/css" href="bootstrap-4.3.1/css/custom.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
     crossorigin="anonymous">
 
@@ -38,13 +38,14 @@
     <!--<script src="javascript/all_buildings.js"></script>-->
     <script src="database/variousData.js"></script>
     <script src="database/dailyPrizes.js"></script>
-    <script src="javascript/all_events_v2.js"></script>
+    <script src="javascript/all_events.js"></script>
     <script src="javascript/global_functions.js"></script>
     <script src="database/items.js"></script>
     <script src="database/languages/langUI.js"></script>
     <script src="database/languages/buildingNamesLanguages.js"></script>
     <script src="javascript/notificationHandler.js"></script>
     <script src="database/notifications.js"></script>
+    <script src="database/languages/quests_tasks.js"></script>
     <script src="database/quests.js"></script>
     <script src="database/languages/quests_translationsHandler.js"></script>
     <script src="database/languages/quests_translationsDictionary.js"></script>
