remove prepare column + shuffle_garden_xxiii first

--- a/events.html
+++ b/events.html
@@ -168,7 +168,7 @@
                 <div class="col-sm">
                     <div class="row center" style="height: 33%; vertical-align: middle">
                         <div class="col-sm">
-                            <center><img src="https://i.ibb.co/n0KBPgt/new-sign.png" style="width: 50px; margin-right: -15px;"><label for="input_event" id="select_event_label" style="margin-left: 20px;"></label>
+                            <center><!--<img src="https://i.ibb.co/n0KBPgt/new-sign.png" style="width: 50px; margin-right: -15px;">--><label for="input_event" id="select_event_label" style="margin-left: 20px;"></label>
                             <select id="input_event" class="custom-select" style="width: 50%;" onchange="setView('calendar')">
 
                             </select>
