temporary icons feature

--- a/events.html
+++ b/events.html
@@ -125,7 +125,7 @@
                         </div>
                     </li>
                     <li>
-                        <img src="images/general/idavis.png" width="48" style="margin-left: 10px;right:8px;margin-top: -3px;">
+                        <img src="images/general/idavis.png" id="web_icon" width="48" style="margin-left: 10px;right:8px;margin-top: -3px;">
                     </li>
                     <li style="visibility: hidden; display: block; display: none;">
                         <a class="nav-link" href="#">Soon</a>
@@ -142,6 +142,7 @@
 
             generateGuestRacesDropdown();
             generateMoreNavbar();
+            generateWebIcon();
         </script>
     </div>
 </head>
@@ -168,7 +169,7 @@
                 <div class="col-sm">
                     <div class="row center" style="height: 33%; vertical-align: middle">
                         <div class="col-sm">
-                            <center><!--<img src="https://i.ibb.co/n0KBPgt/new-sign.png" style="width: 50px; margin-right: -15px;">--><label for="input_event" id="select_event_label" style="margin-left: 20px;"></label>
+                            <center><label for="input_event" id="select_event_label" style="margin-left: 20px;"></label>
                             <select id="input_event" class="custom-select" style="width: 50%;" onchange="setView('calendar')">
 
                             </select>
@@ -244,6 +245,7 @@
     generateChapterDropdown();
     //setLeftBar();
     // setRightBar();
+    generateNewEventSign();
 
 </script>
 
