--- a/buildings.html
+++ b/buildings.html
@@ -114,7 +114,7 @@
                         </div>
                     </li>
                     <li>
-                        <img src="images/general/idavis.png" width="48" style="margin-left: 10px;right:8px;margin-top: -3px;">
+                        <img src="images/general/idavis.png" id="web_icon" width="48" style="margin-left: 10px;right:8px;margin-top: -3px;">
                     </li>
                     <li style="visibility: hidden; display: block; display: none;">
                         <a class="nav-link" href="#">Soon</a>
@@ -131,6 +131,7 @@
 
             generateGuestRacesDropdown();
             generateMoreNavbar();
+            generateWebIcon();
         </script>
     </div>
 </head>
