--- a/donate-create.html
+++ b/donate-create.html
@@ -115,7 +115,7 @@
                         </div>
                     </li>
                     <li>
-                        <img src="images/general/idavis.png" width="48" style="margin-left: 10px;right:8px;margin-top: -3px;">
+                        <img src="images/general/idavis.png" id="web_icon" width="48" style="margin-left: 10px;right:8px;margin-top: -3px;">
                     </li>
                     <li style="visibility: hidden; display: block; display: none;">
                         <a class="nav-link" href="#">Soon</a>
@@ -132,6 +132,7 @@
 
             generateGuestRacesDropdown();
             generateMoreNavbar();
+            generateWebIcon();
         </script>
     </div>
 </head>
