wonders small prep

--- a/guestRaces/guestRacesTabs/ch21/wonders.html
+++ b/guestRaces/guestRacesTabs/ch21/wonders.html
@@ -1,12 +1,16 @@
+<img src="https://i.ibb.co/Zdy6Xh4/ch21-aw1.png">
+
 Maman Le Pré's Antique Shop<br>
 - size 3x5<br>
-- gives boosted Ascended Goods when collecting Community Work<br>
-- produces Seeds every 3 hours depending on Unit Squad size<br>
+- gives boosted Ascended Goods when collecting Community Work (factor: 3x - 32.5x)<br>
+- produces Seeds every 3 hours depending on Unit Squad size (value: 6% - 65%)<br>
 <br>
+
+<img src="https://i.ibb.co/WBT5ZNg/ch21-aw2.png">
 Vallorian School of Sorcery<br>
 - size 8x3<br>
-- produces X Vallorian Guards every 3 hours<br>
-- Cauldron Ingredients Cost Reduction<br>
-- Academy Creation Time Reduction<br>
+- produces X Vallorian Guards every 3 hours (value: 22.5% - 172.5%)<br>
+- Cauldron Ingredients Cost Reduction (factor: -6% - -65%)<br>
+- Academy Creation Time Reduction (factor: -6% - -65%)<br>
 <br>
-pridat avatary, vyuzitie tychto divov, hodnotenie
+avatary, vyuzitie tychto divov, hodnotenie
