goods_icons into separate file

--- a/admin.html
+++ b/admin.html
@@ -22,6 +22,7 @@
     <!-- Our JavaScript -->
     <script src="javascript/admin_page.js"></script>
     <script src="database/variousData.js"></script>
+    <script src="database/goods_icons.js"></script>
     <script src="database/dailyPrizes.js"></script>
     <script src="database/imagesBuildings.js"></script>
     <script src="database/imagesItems.js"></script>
