--- a/buildings.html
+++ b/buildings.html
@@ -40,6 +40,7 @@
     <script src="javascript/all_buildings.js"></script>
     <script src="javascript/global_functions.js"></script>
     <script src="database/variousData.js"></script>
+    <script src="database/goods_icons.js"></script>
     <script src="database/languages/langUI.js"></script>
     <script src="database/languages/buildingNamesLanguages.js"></script>
     <script src="javascript/notificationHandler.js"></script>
