--- a/carnival2021.html
+++ b/carnival2021.html
@@ -35,6 +35,7 @@
     <!-- Our JavaScript -->
     <script src="javascript/all_buildings.js"></script>
     <script src="database/variousData.js"></script>
+    <script src="database/goods_icons.js"></script>
     <!--<script  src="javascript/config.js"></script>-->
     <!-- Modified Bootstrap CSS -->
     <link rel="stylesheet" href="css/config.css">
