--- a/contact.html
+++ b/contact.html
@@ -43,6 +43,7 @@
     <!-- Our JavaScript -->
     <script src="javascript/global_functions.js"></script>
     <script src="database/variousData.js"></script>
+    <script src="database/goods_icons.js"></script>
     <script src="database/languages/langUI.js"></script>
     <script src="javascript/notificationHandler.js"></script>
     <script src="database//notifications.js"></script>
