--- a/donate-finish.html
+++ b/donate-finish.html
@@ -42,6 +42,7 @@
     <!-- Our JavaScript -->
     <script src="javascript/global_functions.js"></script>
     <script src="database/variousData.js"></script>
+    <script src="database/goods_icons.js"></script>
     <script src="database/languages/langUI.js"></script>
     <!--<script  src="javascript/config.js"></script>-->
     <!-- Modified Bootstrap CSS -->
