--- a/events.html
+++ b/events.html
@@ -38,6 +38,8 @@
     <!-- Our JavaScript -->
     <!--<script src="javascript/all_buildings.js"></script>-->
     <script src="database/variousData.js"></script>
+    <script src="database/goods_icons.js"></script>
+    <script src="database/goods_icons.js"></script>
     <script src="database/dailyPrizes.js"></script>
     <script src="javascript/all_events_v3.js"></script>
     <script src="javascript/global_functions.js"></script>
