--- a/tournaments.html
+++ b/tournaments.html
@@ -38,6 +38,7 @@
     <!-- Our JavaScript -->
     <!--<script src="javascript/all_buildings.js"></script>-->
     <script src="database/variousData.js"></script>
+    <script src="database/goods_icons.js"></script>
     <script src="database/tournamentsVariousData.js"></script>
     <script src="javascript/tournaments.js"></script>
     <script src="javascript/global_functions.js"></script>
