update daily prizes + index

--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
         <div class="col-md-6 col-sm-11 center bg-skin_light_background rounded-bottom75 rounded-top75" style="padding-top: 20px; padding-bottom: 20px; max-height: 550px; overflow-y: scroll;">
             <div
              id="column_with_news" class="col-md">
+                <li><strong>Aqua Splendor event arrived!</strong> All buildings from this event are now in the database (June 26th 2023)</li>
                 <li><strong>Floral Awakening event arrived!</strong> All buildings from this event are now in the database (May 25th 2023)</li>
                 <li><strong>Quest Lists Reimagined!</strong> The Quest Lists for events received a massive overhaul and now offer many of your long requested features (May 5th 2023)</li>
                 <li><strong>Mama Juul's Fusion Feast event arrived!</strong> All buildings from this event are now in the database (April 18th 2023)</li>
